fixed alignement of the annually plan

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,12 @@ p {
   margin: 10px;
   padding: 10px;
 }
+
+
+.row p {
+  margin-bottom: 0;
+  text-align: left;
+}
 .payment-button {
   background-color: hsl(245, 75%, 52%);
   padding: 10px 100px;
